add movies website

--- a/UCustomMadeMoviesAPP/UCustomMadeMoviesAPP.iOS/UCustomMadeMoviesAPP.iOS.csproj
+++ b/UCustomMadeMoviesAPP/UCustomMadeMoviesAPP.iOS/UCustomMadeMoviesAPP.iOS.csproj
@@ -46,7 +46,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
-    <CodesignKey>Apple Development: fujie He %2886MPSU2T7B%29</CodesignKey>
+    <CodesignKey>Apple Development: fujie He (86MPSU2T7B)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>None</MtouchLink>
